# Sistema-Solare-3D

./: .gitignore  CMakeLists.txt  README.md  RELAZIONE.md  Relazione_SistemaSolare3D.docx
cmake/: PatchFreeType.cmake
include/glad/: glad.h
scripts/: build-tappe.ps1  build-tappe.sh  fix-all-tappe.ps1  fix_sfml_graphics.py  fix_stb.py  fix_tappa24.py  transform_tappa.py
src/: glad.c  main.cpp
